--- a/doc/ucl.texi
+++ b/doc/ucl.texi
@@ -2712,16 +2712,20 @@ which may be @var{root} or not.
 
 The following routines are used in the implementation of the @avl{}
 binary search tree; they are not meant to be used directly.  @ref{map}
-for the @ucl{} implementation of @avl{} search tree.
+for the @ucl{} implementation of @avl{} search trees.
 
-When using the @code{ucl_node_tag_t} structures in an @avl{} search
-tree, the @code{meta} field is used to store an @dfn{@avl{} status}
-integer which is: @math{-1} when the son subtree is higher than the bro
-subtree; @math{+1} when the bro subtree is higher than the son subtree;
-@math{0} when the son subtree and the bro subtree have equal depth.  In
-a balanced @avl{} tree the difference in depth between a son subtree and
-a bro subtree is always at most @math{1}; so we can say that the @avl{}
-status is the bro's subtree depth minus the son's subtree depth.
+All the following functions accept @code{void *} values as arguments and
+return values; internally these pointers are cast to @code{ucl_node_t}.
+
+The @code{meta} field of the @code{ucl_node_tag_t} structure is used to
+store an @dfn{@avl{} status} integer which is: @math{-1} when the son
+subtree is higher than the bro subtree; @math{+1} when the bro subtree
+is higher than the son subtree; @math{0} when the son subtree and the
+bro subtree have equal depth.  In a balanced @avl{} tree the difference
+in depth between a son subtree and a bro subtree is always at most
+@math{1}; so we can say that the @avl{} status is the bro's subtree
+depth minus the son's subtree depth, such difference is called
+@dfn{balance factor}.
 
 
 @deftypefun {void *} ucl_btree_avl_rot_left (void * @var{cur})
@@ -2738,32 +2742,39 @@ son            cur
 return a pointer to the node that has replaced @var{cur} in the tree,
 which is always the son of @var{cur}.
 
-This function must be called only when:
+This function must be called only when @samp{cur} has balance factor
+@math{-2} and @samp{son} has balance factor @math{-1} or @math{0}; these
+are the useful cases and also the cases for which computing the @avl{}
+statuses after the rotation is not costly.
 
-@itemize
-@item
-both @samp{cur} and @samp{son} are son deeper;
-
-@item
-@samp{cur} is son deeper and @samp{son} is equal depth;
-@end itemize
-
-@noindent
-these are the useful cases and also the cases for which computing the
-@avl{} statuses after the rotation is not costly.
-
-Example:
+Example with @var{cur} being @samp{11} and having son being son deeper
+(balance factors in parentheses):
 
 @example
-          (top)                       (top)
-            |                           |
-           11 (old_cur)                 9 (new_cur)
-           / \                     -----+-----
-(new_cur) 9   12            (son) 7           11 (old_cur)
-         / \             =>      / \         /  \
-  (son) 7   10 (bro)            6   8      10   12
-       / \                               (bro)
-      6   8
+     (top)                   (top)
+       |                       |
+      11(-2)                   9(0)
+     /  \                 -----+-----
+ 9(-1)   12              7          11(0)
+   / \             =>   / \        /  \
+  7   10               6   8     10    12
+ / \
+6   8
+@end example
+
+Example with @var{cur} being @math{12} and having son being equal depth
+(balance factors in parentheses):
+
+@example
+     (top)                      (top)
+       |                          |
+      12(-2)                      9(+1)
+     /  \                    -----+-----
+   9(0)  13                 7          12(-1)
+   / \              =>     / \         /  \
+  7   10                  6   8      10    13
+ / \    \                              \
+6   8    11                             11
 @end example
 @end deftypefun
 
@@ -2773,34 +2784,48 @@ Perform a @dfn{counterclockwise rotation} (or @dfn{right rotation} or
 @dfn{bro rotation}) which balances a right--right--higher subtree:
 
 @example
-cur               bro
-   \             /   \
-   bro     =>  cur   bro_bro
-      \
-  bro_bro
+cur            bro
+   \    =>    /
+   bro      cur
 @end example
 
 @noindent
-return a pointer to the node that has replaced @var{cur} in the
-tree, which is always the bro of @var{cur}.
+return a pointer to the node that has replaced @var{cur} in the tree,
+which is always the bro of @var{cur}.
 
-This function must be called only when both @var{cur} and its bro
-are bro higher (this is the really useful case and it is also the case
-for which computing the @avl{} statuses after the rotation is not
-costly).
+This function must be called only when @samp{cur} has balance factor
+@math{+2} and its bro has balance factor @math{+1} or @math{0}; these
+are the useful cases and also the cases for which computing the @avl{}
+statuses after the rotation is not costly.
 
-Example:
+Example with @var{cur} being @samp{7} and having bro being bro deeper
+(balance factors in parentheses):
 
 @example
-    (top)                              (top)
-      |                                  |
-      7 (old_cur)                        9 (new_cur)
-     / \                            -----+-----
-    6   9 (new_cur)   => (old_cur) 7           11 (bro)
-       / \                        / \         /  \
-(son) 8   11 (bro)               6   8      10    12
-         /  \                      (son)
-       10    12
+(top)                              (top)
+  |                                  |
+  7(+2)                              9(0)
+ / \                            -----+-----
+6   9(+1)         =>           7(0)        11
+   / \                        / \         /  \
+  8   11                     6   8      10    12
+     /  \
+   10    12
+@end example
+
+Example with @var{cur} being @samp{6} and having bro being equal depth
+(balance factors in parentheses):
+
+@example
+(top)                              (top)
+  |                                  |
+  6(+2)                              9(-1)
+ / \                            -----+-----
+5   9(0)          =>           6(+1)       11
+   / \                        / \         /  \
+  8   11                     5=  8      10    12
+ /   /  \                       /
+7  10    12                    7
 @end example
 @end deftypefun
 
@@ -2833,10 +2858,8 @@ son        =>    son     =>  son     cur
 return a pointer to the node that has replaced @var{cur} in the
 tree, which is always the bro of the son of @var{cur}.
 
-This function must be called only when both @var{cur} and its son
-are son higher (this is the really useful case and it is also the case
-for which computing the @avl{} statuses after the rotation is not
-costly).
+This function must be called only when @samp{cur} has balance factor
+@math{-2} and @samp{son} has balance factor @math{+1}.
 
 Example:
 
@@ -2852,32 +2875,54 @@ Example:
         7   9
 (deep_son) (deep_bro)
 @end example
-
-We perform this rotation to balance a tree in which @var{cur} is son
-deeper and its son is bro deeper.
 @end deftypefun
 
 
 @deftypefun {void *} ucl_btree_avl_rot_right_left (void * @var{cur})
 Perform a @dfn{right/left rotation} (or @dfn{bro/son rotation}) which
-balances a right--left--higher subtree; return a pointer to the node
-that has replaced @var{cur} in the tree.  Example:
+balances a right--left--higher subtree:
+
+@example
+cur            bro_son
+   \            /   \
+   bro    =>  cur   bro
+  /
+ bro_son
+@end example
+
+@noindent
+it can be seen as the sequence of a clockwise rotation for @samp{bro}
+and a counterclockwise rotation for @samp{cur}:
+
+@example
+cur           cur                  bro_son
+   \             \                  /   \
+   bro    =>    bro_son       =>  cur   bro
+  /                \
+ bro_son            bro
+@end example
+
+@noindent
+return a pointer to the node that has replaced @var{cur} in the tree,
+which is always the bro of the bro of @var{cur}.
+
+This function must be called only when @samp{cur} has balance factor
+@math{+2} and @samp{son} has balance factor @math{-1}.
+
+Example:
 
 @example
           (top)                           (top)
             |                               |
-  (old_cur) 9                              11 (new_cur)
+  (old_cur) 9(+2)                          11 (0) (new_cur)
            / \                    ----------+---------
-          8   13 (bro)           9 (old_cur)    (bro) 13
+          8   13(-1) (bro)       9(0) (old_cur)       13(0) (bro)
              /  \         =>    / \                  /  \
  (new_cur) 11    14            8   10              12    14
           /  \                   (deep_son)  (deep_bro)
         10    12
 (deep_son)    (deep_bro)
 @end example
-
-We perform this rotation to balance a tree in which @var{cur} is bro
-deeper and its bro is son deeper.
 @end deftypefun
 
 
@@ -2899,7 +2944,7 @@ is zero.
 Return true if the tree of which @var{N} is the root is balanced; if
 @var{N} is @cnull{} the return value is true.  This function only checks
 that the left and right subtrees of each node have depth at most
-different by @math{1}, it does @strong{not} validates the @avl{} status
+different by @math{1}, it does @strong{not} validate the @avl{} status
 of the nodes.
 @end deftypefun
 
@@ -5250,7 +5295,7 @@ The following functions accept @code{void *} as arguments and return
 values; internally these pointers are cast to @code{ucl_node_t}.
 
 
-@deftypefun void ucl_map_remove (ucl_map_t @var{M}, void * @var{L})
+@deftypefun void ucl_map_delete (ucl_map_t @var{M}, void * @var{L})
 Remove the node @var{L} from the referenced map.  @var{L} must be the
 return value of a previous invocation to @cfunc{ucl_map_find}.  This
 function only removes the link from the map, it's our responsibility to
