--- a/doc/ucl.texi
+++ b/doc/ucl.texi
@@ -3458,9 +3458,12 @@ Initialises a post--order iteration.
 
 
 The heap container allows us to collect a bunch of values and extract
-them sorted, from the lesser to the greater according to a custom
+them sorted, from the lesser to the greater, according to a custom
 comparison function.  The @ucl{} heap is implemented as a binary tree,
-with nodes of type @code{ucl_node_tag_t}.
+with nodes of type @code{ucl_node_tag_t}; the current implementation is
+probably inefficient, especially because of the cost of finding the next
+node under which append new nodes; but even without that, it would not
+be an efficient implementation anyway.
 
 @menu
 * heap intro::                  How it is done.
@@ -3636,84 +3639,23 @@ K = getkey.func(getkey.data, L);
 
 
 @deftypefun void ucl_heap_initialise (ucl_heap_t @var{H}, ucl_comparison_t @var{keycmp}, ucl_node_getkey_t @var{getkey})
-Initialise an already allocated heap structure.  @var{H} must be a
-pointer to an already allocated map structure; pointer to the already
-allocated map structure; @var{flags} configures the map behaviour;
-@var{keycmp} is the function+context used to compare keys; @var{getkey}
-is the function+context used to extract the key from nodes.
-@end deftypefun
-
+Initialise an already allocated heap structure. @var{keycmp} is the
+function+context used to compare keys; @var{getkey} is the
+function+context used to extract the key from nodes.
 
 When a heap must be destroyed: all its nodes must be extracted and
-released with the appropriate function; example of heap destruction:
-
-@example
-ucl_memory_allocator_t  A;
-ucl_heap_t              H;
-ucl_node_t              N;
-
-while (ucl_heap_size(H))
-  @{
-    N = ucl_heap_extract(H);
-    A.alloc(A.data, &N, 0);
-  @}
-@end example
-
-As example of comparison function definition:
-
-@example
-typedef struct @{
-  ucl_node_tag_t  node;
-  int             value;
-@} node_tag_t;
-
-typedef node_tag_t *    node_t;
-
-const ucl_comparison_t compare_nodes = @{
-  .data = @{ .t_unsigned_long = 0 @},
-  .func = compare_nodes_fun
-@};
-
-int
-compare_nodes_fun (ucl_value_t D UCL_UNUSED,
-                   const ucl_value_t a, const ucl_value_t b)
-@{
-  node_t        A = a.pointer;
-  node_t        B = b.pointer;
-  return ((A->value == B->value)?
-     0 : ((A->value > B->value)? 1 : -1));
-@}
-@end example
+released with the appropriate function.
+@end deftypefun
 
 @c page
 @node heap insertion
 @subsection Adding elements to a heap
 
 
-@deftypefun void ucl_heap_insert (ucl_heap_t @var{H}, void * @var{node})
-Insert a new node in the heap.  @var{node} is internally cast to
+@deftypefun void ucl_heap_insert (ucl_heap_t @var{H}, void * @var{N})
+Insert a new node in the heap.  @var{N} is internally cast to
 @code{ucl_node_t}.
 @end deftypefun
-
-
-Example of node insertion:
-
-@example
-typedef struct @{
-  ucl_node_tag_t  node;
-  int             value;
-@} node_tag_t;
-
-typedef node_tag_t *    node_t;
-
-ucl_memory_allocator_t  A;
-ucl_heap_t              H;
-node_t                  N = NULL;
-
-A.alloc(A.data, &N, sizeof(node_tag_t));
-N->value = 123;
-ucl_heap_insert(H, N);
-@end example
 
 @c page
 @node heap deletion
@@ -3725,26 +3667,6 @@ Extract a node from the heap; return a pointer to it, or @cnull{} if the
 heap is empty.  The extracted node is the one with the smallest value;
 the returned value can be safely cast to @code{ucl_node_t}.
 @end deftypefun
-
-
-Example of node extraction:
-
-@example
-typedef struct @{
-  ucl_node_tag_t  node;
-  int             value;
-@} node_tag_t;
-
-typedef node_tag_t *    node_t;
-
-ucl_memory_allocator_t  A;
-ucl_heap_t              H;
-node_t                  N;
-
-N = ucl_heap_extract(H);
-A.alloc(A.data, &N, 0);
-@end example
-
 
 @c page
 @node heap ops
